# robcotech

./: .env.production.example  .gitignore  AGENTS.md  AGENT_OPPORTUNITIES.md  AZURE_DEPLOYMENT_AGENT.md  AZURE_DEPLOYMENT_STATUS.md  AZURE_QUICK_START.md  CNAME  DEPLOY_NOW.md  E2E_TEST_REPORT.md  HOW_TO_RUN_TESTS.md  LICENSE  Makefile  PHASE1_COMPLETE.md  README.md  RUN_AZURE_DEPLOY.md  STRIPE_COMPLETE.md  STRIPE_SETUP.md  TEST_REPORT.md  azure-deployment-summary.txt  deploy-to-azure.sh  deploy-vps.sh  docker-compose.yml  fsaipro-in.md  fsaipro.md  index.html  pyproject.toml  quick-start.sh
.github/workflows/: deploy-frontend.yml
apps/web/: .env.example  .env.local.example  README.md  package-lock.json  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  store.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
infra/k8s/: arkham-deployment.yaml  gateway-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  secrets.yaml
infra/terraform/: main.tf  variables.tf
scripts/: create_stripe_products.py
services/arkham/: Dockerfile  pyproject.toml
services/billing/: pyproject.toml
services/billing/app/: checkout.py  main.py  metering.py  plans.py  settings.py  stripe.py
services/bim_ingestion/: Dockerfile  pyproject.toml
services/gateway/: Dockerfile  go.mod  go.sum
services/memory/: pyproject.toml
services/orchestration/: pyproject.toml
services/papabase/: Dockerfile  README.md  go.mod  go.sum  pricing-tiers.yaml
services/semantic-cache/: pyproject.toml
services/semantic-cache/app/: embeddings.py  lookup.py  main.py  settings.py  storage.py
tests/: BIMS_Structural.ifc  run_e2e_test.py  test_ifc_parser.py
tests/e2e/: test_bim_workflow.py
(+78 files in other folders)
