[project]
name = "semantic-cache"
version = "0.1.0"
description = "Semantic Cache Service for FullStackArkham"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "orjson>=3.9.0",
    "redis>=5.0.3",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.3.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
exclude = ["build", "node_modules", ".venv"]
